# simple_image_captioner

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
notebooks/: 01_setup_and_first_caption.ipynb
src/: batch_pipeline.py  captioning.py  evaluation.py  feature_extraction.py
src/models/: florence.py  qwen.py  registry.py
